mon premier commit

--- a/tp2.html
+++ b/tp2.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../tp2/tp2.css">
-    <script src="tp2.js" defer></script>
+    <link rel="stylesheet" href="../tp2_WYSIWYG/tp2.css">
+    <script src="../tp2_WYSIWYG/tp2.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -18,13 +18,10 @@
         <button class="btn_DM" onclick="darkMode()">dark-mode</button>
         <p style="background: red; float: right; border-radius: 50%;" >Bienvenue</p>
     </header>
-    <main>
-        <center>
-            <textarea class="myText1"  style="background-color: rgb(228, 228, 228);"></textarea>
-        </center>    
-            <div class="myText2" style="overflow-wrap:break-word; background-color: rgb(228, 228, 228);" >
-                
-            </div>
+    <main>       
+        <textarea class="myText1"  style="background-color: rgb(228, 228, 228);"></textarea>
+        <div class="myText2" style="overflow-wrap:break-word; background-color: rgb(228, 228, 228);" ></div>
+       
         <center>
             <p>Chargement en cours...</p>  
             <div class="loader"></div>  
@@ -32,7 +29,7 @@
             <div class="bar">
                 <div class="progressBar"></div>
             </div>
-        </center>
+       </center>   
         <br>
         <br>
         <br>
