--- a/tp2.html
+++ b/tp2.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="tp2_WYSIWYG/tp2.css">
-    <script src="tp2_WYSIWYG/tp2.js" defer></script>
+    <link rel="stylesheet" href="tp2.css">
+    <script src="tp2.js" defer></script>
     <title>Document</title>
 </head>
 <body>
